# niv

./: CMakeLists.txt  CONTRIBUTING.md  Makefile  README.adoc  README.md
src/: cli.c  defs.h  input.c  main.c  windowing.c
src/incl/: logger.h  windowing.h
src/incl/defs/: windowing.c
src/include/: cli.h  defs.h  input.h  windowing.h
